Adding more dotfiles

--- a/root/.tmux.conf
+++ b/root/.tmux.conf
@@ -1,11 +1,23 @@
 # My Tmux Configure file
 
-# Change prefix key
-set -g prefix C-a
-bind C-a send-prefix
 
-# 0 is too far from ` ;)
+###########################
+# TMUX Perferences
+###########################
+
+# set first window to index 1 (not 0) to map more to the keyboard layout
 set -g base-index 1
+set -g pane-base-index 1
+
+# pass through xterm keys
+set -g xterm-keys on
+
+# Using the mouse to switch panes
+#set -g mouse-utf8 on
+set -g mouse on
+
+# Change kill window key
+bind k kill-window
 
 # Add Vim key to copy mode
 setw -g mode-keys vi
@@ -13,16 +25,85 @@ setw -g mode-keys vi
 # Add vim keys to windows
 set-window-option -g mode-keys vi
 
-# Create Panes: window splitting
-# Split vertically
+###########################
+# TMUX Shortcuts
+###########################
+
+# Change prefix key
+set -g prefix C-a
+bind C-a send-prefix
+
+# Change kill pane to no prompt
+bind x kill-pane
+
+# Split pane vertically
 unbind %
 bind | split-window -h    # Prefix | to create vertical split
-# Split horizontally
+# Split pane horizontally
 unbind '"'
 bind - split-window -v    # Prefix - to create horizontal split
 
 # resize panes with Capital H,J,K,L
-bind -r H resize-pane -L 5   # 5 px bigger to the left
-bind -r J resize-pane -D 5   # 5 px bigger down
-bind -r K resize-pane -U 5   # 5 px bigger up
-bind -r L resize-pane -R 5   # 5 px bigger right
+bind -r C-h resize-pane -L 5   # 5 px bigger to the left
+bind -r C-j resize-pane -D 5   # 5 px bigger down
+bind -r C-k resize-pane -U 5   # 5 px bigger up
+bind -r C-l resize-pane -R 5   # 5 px bigger right
+
+###########################
+# Colors
+###########################
+
+# color status bar
+set -g status-style fg=white,bg=colour235
+# color of message bar
+set -g message-style fg=white,bold,bg=green
+
+# highlight current window
+setw -g window-status-style fg=cyan,bg=colour235
+setw -g window-status-current-style fg=white,bold,bg=blue
+
+# set color of active pane
+set -g pane-border-style fg=colour240,bg=black
+set -g pane-active-border-style fg=green,bg=black
+
+
+set -g default-terminal "screen-256color"
+# tell Tmux that outside terminal supports true color
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
+###########################
+# Plugin Perferences
+###########################
+# Tmux Battery
+# https://github.com/tmux-plugins/tmux-battery
+set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
+###########################
+# Plugins
+###########################
+# To install plugins:
+#   1) Add plugin down here
+#   2) Prefix + I to install plugin
+# To update plugins:
+#   1) Prefix + U
+# To remove plugins:
+#   1) Remove line down here
+#   2) Prefix + ALT + U
+# If you're using iTerm2 on a Mac you may need to go to your Profiles, 
+# then keys and select that the `option` key should be treated as `Esc+` 
+# in order for the `Prefix + ALT + U` combination to work.
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
