--- a/tmux/Old/.tmux.conf
+++ b/tmux/Old/.tmux.conf
@@ -152,7 +152,6 @@ if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 
 if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
 if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
 
-
 # -- buffers -------------------------------------------------------------------
 
 bind b list-buffers  # list paste buffers
@@ -162,7 +161,7 @@ bind P choose-buffer # choose which buffer to paste from
 
 # -- user defined overrides ----------------------------------------------------
 
-if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+if '[ -f ~/.tmux.local.conf ]' 'source ~/.tmux.local.conf'
 
 
 # -- 8< ------------------------------------------------------------------------
