--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 .DS_Store
-plugins/
-zsh/plugins/zsh-autopair
-zsh/plugins/zsh-autosuggestions
-zsh/plugins/zsh-syntax-highlighting
+.zsh_history
 .zsh_history
