--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,10 @@
 [user]
-	name = Karl Johson
-	email = karl.s.johnson@gmail.com
+	name = Karl Johnson
+	email = karlsjohnson@icloud.com
 [color]
 	ui = auto
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
